[tool.poetry]
name = "c7n-docs-ng"
version = "0.1.0"
description = ""
authors = ["Jorge Castro <jorge@stacklet.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"
mkdocs-material = "^7.2.4"
mkdocs-redirects = "^1.0.3"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"
mkdocs-minify-plugin = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
